BREAKING CHANGE: rename xxxForProxy as assertXXX or doXXX
chore: revert removing protected methods allowing to change final methods behavior

Fix #4303